@@ -61,7 +61,7 @@
    "provides" : {
       "App::CPAN::Dependents" : {
          "file" : "lib/App/CPAN/Dependents.pm",
-         "version" : "0.006"
+         "version" : "1.000"
       }
    },
    "release_status" : "stable",
@@ -77,7 +77,7 @@
       },
       "x_IRC" : "irc://irc.perl.org/#metacpan"
    },
-   "version" : "0.006",
+   "version" : "1.000",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.024000"
@@ -271,7 +271,7 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "v0.006",
+                  "tag" : "v1.000",
                   "tag_format" : "v%v",
                   "tag_message" : "v%v"
                },
