@@ -1,4 +1,7 @@
 {{$NEXT}}
+  - Use MetaCPAN::Client to query via the new MetaCPAN API v1
+  - Added mcpan parameter to find_all_dependents for specifying a
+    MetaCPAN::Client object to use
 
 0.005     2016-03-14 14:44:47 EDT
   - Use Getopt::Long::Modern
